samples/_failures_safe/1761475351_b18ef5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6b65c977.c: In function ‘main’:
./samples/SAFE/__tmp_6b65c977.c:147:5: error: expected declaration or statement at end of input
  147 |     }
      |     ^
